# compare_f1_f2

./: README.md  pyproject.toml
notebooks/: bamber_ssp585_comparison.ipynb  deconto21_ais_comparison.ipynb  experiment_comparison.ipynb  fitted_ismip_gris.ipynb  ipccar5glaciers_ssp585_comparison.ipynb  ipccar5icesheets_comparison.ipynb  larmip.ipynb  nz_insar_gps_comparison.ipynb
src/compare_f1_f2/: __init__.py  plotting.py  results_compare.py
